Alterando configurações de segurança e adicionando o metodo listarMateriais